--- a/src/filters/Makefile.am
+++ b/src/filters/Makefile.am
@@ -20,7 +20,10 @@
 
 # List any local filter regex files here:
 GIELLA_FILTER_LOCAL_REGEX_SRCS=\
-					downcase_UCletters.regex
+					downcase_UCletters.regex \
+					remove-norm-comp-tags.regex \
+					insert-default-compounding-tags.regex \
+					convert_to_flags-CmpNP-tags.regex
 
 # List any local filter xfscript files here:
 GIELLA_FILTER_LOCAL_XFSCRIPT_SRCS=
