--- a/src/morphology/Makefile.am
+++ b/src/morphology/Makefile.am
@@ -23,6 +23,7 @@ GT_LEXC_ROOT=root.lexc
 
 # Set this to the names of all regular lexc source files:
 GT_LEXC_SRCS_L1_L2=\
+			 compounding.lexc         \
 			 affixes/adjectives.lexc  \
 			 affixes/nouns.lexc       \
 			 affixes/propernouns.lexc \
