Apply compound restrictions also to the FAO speller.

--- a/tools/spellcheckers/fstbased/filters/Makefile.am
+++ b/tools/spellcheckers/fstbased/filters/Makefile.am
@@ -11,7 +11,9 @@ GT_LOCAL_FSTSPELLER_FILTER_SRCS=
 
 # Source files copied from src/filters/ OR from
 # $(GIELLA_SHARED)/all_langs/tools/spellcheckers/fstbased/filters:
-GT_LOCAL_COPY_FILTER_SRCS=
+GT_LOCAL_COPY_FILTER_SRCS=\
+	convert_to_flags-CmpNP-tags.regex \
+	split-CmpNP-tags.regex
 
 # Only build these things if speller fst's are enabled:
 if WANT_SPELLERS
