More more filter missing: svn copy of sme filter to split double CmpNP tags in separate paths (First + Last), so that both are accepted when both are specified.

--- a/src/filters/Makefile.am
+++ b/src/filters/Makefile.am
@@ -22,7 +22,8 @@
 GIELLA_FILTER_LOCAL_REGEX_SRCS=\
 					downcase_UCletters.regex \
 					remove-norm-comp-tags.regex \
-					convert_to_flags-CmpNP-tags.regex
+					convert_to_flags-CmpNP-tags.regex \
+					split-CmpNP-tags.regex
 
 # List any local filter xfscript files here:
 GIELLA_FILTER_LOCAL_XFSCRIPT_SRCS=
