--- a/tools/grammarcheckers/Makefile.am
+++ b/tools/grammarcheckers/Makefile.am
@@ -3,13 +3,16 @@
 ## Licence: GPL v3+
 
 # set this to name of cg3 dependency rules
-GT_GRAMMARCHECKER=
+GT_GRAMMARCHECKER=grammarchecker.cg3
 
 # set this to names of cg3 binaries 
-GT_GC_TARGETS=
+GT_GC_TARGETS=grammarchecker.bin
 
 # set this to the filename of the file being used by voikkogc:
-GT_GC_DISTRO=
-GT_GC_ZDISTRO=
+GT_GC_DISTRO=gramchk.bin
+GT_GC_ZDISTRO=grammarchecker.zhfst
 
 include $(top_srcdir)/am-shared/tools-grammarcheckers-dir-include.am
+
+modes/faogram.mode: modes.xml
+	apertium-gen-modes modes.xml
