Korrigerte testen til verb s28/30, den har blanda bøying skaddi/skaðaði osb (seier FO), det hadde analysatoren, men ikkje yaml-testen.

--- a/test/src/gt-norm-yamls/V-s28x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s28x30_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - æra: # 
     skaða+V+Inf: skaða
     skaða+V+Ind+Prs+3Sg: skaðar
-    skaða+V+Ind+Prt+Sg: skaddi
-    skaða+V+Ind+Prt+Pl: skaddu
-    skaða+V+Sup: skatt
-    skaða+V+PrfPrc: skaddur
+    skaða+V+Ind+Prt+Sg: [skaddi, skaðaði]
+    skaða+V+Ind+Prt+Pl: [skaddu, skaðaðu]
+    skaða+V+Sup: [skatt, skaðað]
+    skaða+V+PrfPrc: [skaddur, skaðaður]
