Korrigerte testen til verb s28/30, den har blanda bøying skaddi/skaðaði osb (seier FO), det hadde analysatoren, men ikkje yaml-testen.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@149705 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/test/src/gt-norm-yamls/V-s2x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s2x30_gt-norm.yaml
@@ -11,11 +11,8 @@ Tests:
 
   Verb - skjóla: # 
     skjóla+V+Inf: skjóla
-    skjóla+V+Ind+Prs+3Sg: skjólir
-    skjóla+V+Ind+Prs+3Sg: skjólar
-    skjóla+V+Ind+Prt+Sg: skjólaði
-    skjóla+V+Ind+Prt+Pl: skjóltu
-    skjóla+V+Ind+Prt+Pl: skjólaðu
-    skjóla+V+Sup: skjólt
-    skjóla+V+Sup: skjólað
-    skjóla+V+PrfPrc: skjólaður
+    skjóla+V+Ind+Prs+3Sg: [skjólir, skjólar]
+    skjóla+V+Ind+Prt+Sg: [skjólaði, skjólti]
+    skjóla+V+Ind+Prt+Pl: [skjóltu, skjólaðu]
+    skjóla+V+Sup: [skjólt, skjólað]
+    skjóla+V+PrfPrc: [skjóltur, skjólaður]
