Rydda opp i testfiler

--- a/test/src/gt-norm-yamls/V-s30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s30_gt-norm.yaml
@@ -11,7 +11,7 @@ Tests:
 
   Verb - klippa: # 
     klippa+v2+V+Inf: klippa
-    klippa+v2+V+Ind+Prs+3Sg: klippiar
+    klippa+v2+V+Ind+Prs+3Sg: klippar
     klippa+v2+V+Ind+Prt+Sg: klippaði
     klippa+v2+V+Ind+Prt+Pl: klippaðu
     klippa+v2+V+Sup: klippað
