--- a/test/src/gt-norm-yamls/V-s30x9_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s30x9_gt-norm.yaml
@@ -11,6 +11,8 @@ Tests:
 
   Verb - kippa: # 
     kippa+V+Inf: kippa
-    kippa+V+Ind+Prs+3Sg: kippir
-    kippa+V+Ind+Prt+Pl: kiptu
-    kippa+V+Sup: kipt
+    kippa+V+Ind+Prs+3Sg: [kippar, kippir]
+    kippa+V+Ind+Prt+Sg: [kippaði, kipti]
+    kippa+V+Ind+Prt+Pl: [kippaðu, kiptu]
+    kippa+V+Sup: [kippað, kipt]
+    kippa+V+PrsPrf: [kippaður, kiptur]
