--- a/test/src/gt-norm-yamls/V-s9_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s9_gt-norm.yaml
@@ -10,8 +10,10 @@ Config:
 Tests:
 
   Verb - klippa: # 
-    klippa+V+Inf: klippa
-    klippa+V+Ind+Prs+3Sg: klippir
-    klippa+V+Ind+Prt+Pl: kliptu
-    klippa+V+Sup: klipt
+    klippa+v1+V+Inf: klippa
+    klippa+v1+V+Ind+Prs+3Sg: klippir
+    klippa+v1+V+Ind+Prt+Sg: klipti
+    klippa+v1+V+Ind+Prt+Pl: kliptu
+    klippa+v1+V+Sup: klipt
+    klippa+v1+V+PrfPrc: kliptur
 
