--- a/test/src/gt-norm-yamls/V-s9x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s9x30_gt-norm.yaml
@@ -12,7 +12,7 @@ Tests:
   Verb - stilla: # 
     stilla+V+Inf: stilla
     stilla+V+Ind+Prs+3Sg: [stillir, stillar]
-    stilla+V+Ind+Prt+Sg: stillaði
+    stilla+V+Ind+Prt+Sg: [stilti, stillaði]
     stilla+V+Ind+Prt+Pl: [stiltu, stillaðu]
     stilla+V+Sup: [stilt, stillað]
-    stilla+V+PrfPrc: stillaður
+    stilla+V+PrfPrc: [stiltur, stillaður]
