La til dobbeltformene i s30/6-paradigmet.

--- a/test/src/gt-norm-yamls/V-s30x6_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s30x6_gt-norm.yaml
@@ -11,7 +11,8 @@ Tests:
 
   Verb - varða: # 
     varða+V+Inf: varða
-    varða+V+Ind+Prt+Sg: vardi
-    varða+V+Ind+Prt+Pl: vardu
-    varða+V+Sup: vart
-    varða+V+PrfPrc: vardur
+    varða+V+Ind+Prs+Sg: [varðar, varðir]
+    varða+V+Ind+Prt+Sg: [vardaði, vardi]
+    varða+V+Ind+Prt+Pl: [vardaðu, vardu]
+    varða+V+Sup: [vardað, vart]
+    varða+V+PrfPrc: [vardaður, vardur]
