Samråd med Hjalmar: Eitt verb klippa - klipti, ut med klippaði
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@149777 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/test/src/gt-norm-yamls/V-s9_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s9_gt-norm.yaml
@@ -10,10 +10,10 @@ Config:
 Tests:
 
   Verb - klippa: # 
-    klippa+v1+V+Inf: klippa
-    klippa+v1+V+Ind+Prs+3Sg: klippir
-    klippa+v1+V+Ind+Prt+Sg: klipti
-    klippa+v1+V+Ind+Prt+Pl: kliptu
-    klippa+v1+V+Sup: klipt
-    klippa+v1+V+PrfPrc: kliptur
+    klippa+V+Inf: klippa
+    klippa+V+Ind+Prs+3Sg: klippir
+    klippa+V+Ind+Prt+Sg: klipti
+    klippa+V+Ind+Prt+Pl: kliptu
+    klippa+V+Sup: klipt
+    klippa+V+PrfPrc: kliptur
 
