[Template merge - langs/und] Added the first version of a $LANG/devtools/ script that will process a corpus with the available tools, and compare the result against the previous version in the svn repository. The idea is to be able to easily spot regressions in analyses due to changes in the lexicons or CG rules. There are a number of rough edges, but it works.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@150013 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/configure.ac
+++ b/configure.ac
@@ -243,6 +243,8 @@ AC_CONFIG_FILES([test/tools/spellcheckers/fstbased/desktop/hfst/accept-all-lemma
 # Shorthand shell scripts instead of the old-type aliases - all languages:
 AC_CONFIG_FILES([tools/shellscripts/ufao-gt.sh], \
       [chmod a+x tools/shellscripts/ufao-gt.sh])
+AC_CONFIG_FILES([devtools/check_analysis_regressions.sh], \
+      [chmod a+x devtools/check_analysis_regressions.sh])
 
 #### BEGIN: Add language-specific scripts below here: ####
 
