--- a/devtools/test_voikkospell_suggestions.sh.in
+++ b/devtools/test_voikkospell_suggestions.sh.in
@@ -8,12 +8,16 @@
 # set -x
 
 # Language being tested, ISO 639-1 code if available:
-GTLANG2=fo
+giella_lang=@GTLANG@
+giella2c_lang=@GTLANG2@
 
-# Directory variables:
-SCRIPT_DIR="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
-top_srcdir="$SCRIPT_DIR/.."
-builddir="."
+# Directory variables from configure:
+top_srcdir=@top_srcdir@
+top_builddir=@top_builddir@
+giella_core=@GIELLA_CORE@
+
+# Other directory variables:
+SCRIPT_DIR=$top_srcdir/devtools/
 spellerdir=tools/spellcheckers/fstbased/desktop/hfst
 
 # File variables:
@@ -30,20 +34,16 @@ speller_results="$SCRIPT_DIR/speller_result_${file_spesifier}.${engine}.html"
 DATE=$(date +%Y%m%d)
 TESTTIME=$(date +%H%M)
 
-giella_core=$GTHOME/giella-core
-
 function print_usage() {
     echo "Usage: $0 [OPTIONS...]"
-    echo "Test the voikko command line speller voikkospell using typos data"
+    echo "Test the $giella_lang speller using voikkospell and typos data"
     echo
     echo "  -h, --help          Print this usage info"
-    echo "  -b, --builddir DIR  Specify top build directory relative to"
-    echo "                      the directory containing configure.ac"
     echo
 }
 
 # Wrong usage - short instruction:
-if test $# -ge 3 ; then
+if test $# -ge 2 ; then
     print_usage
     exit 1
 fi
@@ -53,20 +53,9 @@ while test $# -ge 1 ; do
     if test x$1 = x--help -o x$1 = x-h ; then
         print_usage
         exit 0
-    elif test x$1 = x--builddir -o x$1 = x-b ; then
-        if test -z "$2" ; then
-            print_usage
-            exit 1
-        else
-            builddir="$2"
-            shift
-        fi
     fi
     shift
 done
-
-# Set the top build dir after parameter parsing:
-top_builddir="$top_srcdir/$builddir"
 
 # Add easter egg version info trigger:
 echo "nuvviDspeller	Divvun" > $SCRIPT_DIR/$speller_test_data
@@ -82,7 +71,7 @@ cut -f1 $SCRIPT_DIR/$speller_test_data > $SCRIPT_DIR/$speller_input
 $giella_core/scripts/run_voikko_speller.sh $SCRIPT_DIR/$speller_input \
                                       $SCRIPT_DIR/$speller_output \
                                       $SCRIPT_DIR/$speller_timeusage \
-                                      $GTLANG2 \
+                                      $giella2c_lang \
                                       "$top_builddir/$spellerdir"
 
 rm -f "$speller_results"
@@ -90,7 +79,7 @@ rm -f "$speller_results"
 # Convert speller output to common xml:
 $giella_core/scripts/speller-testres.pl \
 		--engine=${engine} \
-		--lang=$GTLANG2 \
+		--lang=$giella2c_lang \
 		--input="$SCRIPT_DIR/$speller_test_data" \
 		--output="$SCRIPT_DIR/$speller_output" \
 		--document=$(basename "$typos_file") \
