[Template merge - langs/und] Updated the pipespec.xml file to comply with the newest version of the grammar checker code, where each argument type is explicitly specified. Makes for a more robust pipeline.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@161994 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/tools/grammarcheckers/pipespec.xml.in
+++ b/tools/grammarcheckers/pipespec.xml.in
@@ -11,38 +11,38 @@
   <pipeline name="faogram-nospell"
             language="fo"
             type="Grammar error">
-    <tokenize><arg n="tokeniser-gramcheck-gt-desc.pmhfst"/></tokenize>
-    <cg><arg n="mwe-dis.bin"/></cg>
+    <tokenize><tokenizer n="tokeniser-gramcheck-gt-desc.pmhfst"/></tokenize>
+    <cg><grammar n="mwe-dis.bin"/></cg>
     <mwesplit/>
     <blanktag>
-      <arg n="analyser-gt-whitespace.hfst"/>
+      <blanktagger n="analyser-gt-whitespace.hfst"/>
     </blanktag>
-    <cg><arg n="disambiguator.bin"/></cg>
-    <cg><arg n="grammarchecker.bin"/></cg>
+    <cg><grammar n="disambiguator.bin"/></cg>
+    <cg><grammar n="grammarchecker.bin"/></cg>
     <suggest>
-      <arg n="generator-gt-norm.hfstol"/>
-      <arg n="@srcdir@/errors.xml"/>
+      <generator n="generator-gt-norm.hfstol"/>
+      <messages n="@srcdir@/errors.xml"/>
     </suggest>
   </pipeline>
 
   <pipeline name="faogram"
             language="fo"
             type="Grammar error">
-    <tokenize><arg n="tokeniser-gramcheck-gt-desc.pmhfst"/></tokenize>
-    <cg><arg n="mwe-dis.bin"/></cg>
+    <tokenize><tokenizer n="tokeniser-gramcheck-gt-desc.pmhfst"/></tokenize>
+    <cg><grammar n="mwe-dis.bin"/></cg>
     <mwesplit/>
     <blanktag>
-      <arg n="analyser-gt-whitespace.hfst"/>
+      <blanktagger n="analyser-gt-whitespace.hfst"/>
     </blanktag>
     <cgspell>
-      <arg n="errmodel.default.hfst"/>
-      <arg n="acceptor.default.hfst"/>
+      <lexicon n="acceptor.default.hfst"/>
+      <errmodel n="errmodel.default.hfst"/>
     </cgspell>
-    <cg><arg n="disambiguator.bin"/></cg>
-    <cg><arg n="grammarchecker.bin"/></cg>
+    <cg><grammar n="disambiguator.bin"/></cg>
+    <cg><grammar n="grammarchecker.bin"/></cg>
     <suggest>
-      <arg n="generator-gt-norm.hfstol"/>
-      <arg n="@srcdir@/errors.xml"/>
+      <generator n="generator-gt-norm.hfstol"/>
+      <messages n="@srcdir@/errors.xml"/>
     </suggest>
   </pipeline>
 
