--- a/test/src/gt-norm-yamls/V-s66_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s66_gt-norm.yaml
@@ -11,7 +11,8 @@ Tests:
 
   Verb - biðja: # 
     biðja+V+Inf: biðja
-    biðja+V+Ind+Prs+3Sg: [biður, bað]
+    biðja+V+Ind+Prs+3Sg: biður
+    biðja+V+Ind+Prt+3Sg: bað
     biðja+V+Ind+Prt+Pl: bóðu
     biðja+V+Sup: biðið
     biðja+V+Inf: biðja
