--- a/devtools/check_analysis_regressions.sh.in
+++ b/devtools/check_analysis_regressions.sh.in
@@ -25,18 +25,18 @@ corpus_file=$corpusdir/$source_corpus.txt
 analyser=$top_builddir/src/analyser-disamb-gt-desc
 tokeniser=$top_builddir/tools/tokenisers/tokeniser-disamb-gt-desc.pmhfst
 mwe_dis=$top_srcdir/tools/tokenisers/mwe-dis.cg3
-disambiguator=$top_builddir/src/syntax/disambiguator.bin
-functions_cg=$top_builddir/src/syntax/functions.bin
-dependencies=$top_builddir/src/syntax/dependency.bin
+disambiguator=$top_builddir/src/syntax/disambiguator.cg3
+functions_cg=$top_builddir/src/syntax/functions.cg3
+dependencies=$top_builddir/src/syntax/dependency.cg3
 
 # Grammar checker variants:
 grc_tknsr=$top_builddir/tools/grammarcheckers/tokeniser-gramcheck-gt-desc.pmhfst
-valency=$top_builddir/tools/grammarcheckers/valency.bin
-grc_mwe_dis=$top_builddir/tools/grammarcheckers/mwe-dis.bin
+valency=$top_builddir/tools/grammarcheckers/valency.cg3
+grc_mwe_dis=$top_builddir/tools/grammarcheckers/mwe-dis.cg3
 whitespace=$top_builddir/tools/grammarcheckers/analyser-gt-whitespace.hfst
 speller=$top_builddir/tools/grammarcheckers/$giella_lang.zhfst
-grc_disamb=$top_builddir/tools/grammarcheckers/disambiguator.bin
-gramchecker=$top_builddir/tools/grammarcheckers/disambiguator.bin
+grc_disamb=$top_builddir/tools/grammarcheckers/disambiguator.cg3
+gramchecker=$top_builddir/tools/grammarcheckers/disambiguator.cg3
 grmchk_generator=$top_builddir/tools/grammarcheckers/generator-gt-norm.hfstol
 grmchk_errmessages=$top_srcdir/tools/grammarcheckers/errors.xml
 
