--- a/test/src/gt-norm-yamls/V-s30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s30_gt-norm.yaml
@@ -9,10 +9,10 @@ Config:
 
 Tests:
 
-  Verb - klippa: # 
-    klippa+v2+V+Inf: klippa
-    klippa+v2+V+Ind+Prs+3Sg: klippar
-    klippa+v2+V+Ind+Prt+Sg: klippaði
-    klippa+v2+V+Ind+Prt+Pl: klippaðu
-    klippa+v2+V+Sup: klippað
-    klippa+v2+V+PrfPrc: klippaður
+  Verb - mekanisera: # 
+    mekanisera+V+Inf: mekanisera
+    mekanisera+V+Ind+Prs+3Sg: mekaniserar
+    mekanisera+V+Ind+Prt+Sg: mekaniseraði
+    mekanisera+V+Ind+Prt+Pl: mekaniseraðu
+    mekanisera+V+Sup: mekaniserað
+    mekanisera+V+PrfPrc: mekaniseraður
