[Template merge - langs/und] Massive rewrite of filter codes and automatically generated tag conversions, all done to handle bug #2474 (URL tag not correctly formatted in the tokeniser output). The bug should be fixed now.

--- a/tools/mt/apertium/Makefile.am
+++ b/tools/mt/apertium/Makefile.am
@@ -45,4 +45,7 @@ analyser-mt-gt-desc.hfst: analyser-mt-gt-desc.tmp.hfst \
 clean-local:
 	-rm -f *.hfst *.gz *.cg3 *.bin *.hfstol
 
+##########################################
+# General build rules included from here:#
+
 include $(top_srcdir)/am-shared/tools-mt-apertium-dir-include.am
