--- a/tools/mt/filters/Makefile.am
+++ b/tools/mt/filters/Makefile.am
@@ -20,30 +20,22 @@
 ##################################################################
 
 # List any local additions here:
-GT_MT_FILTER_SRCS=remove-derivation-strings.regex
+GT_MT_FILTER_SRCS=
 
 # Only build these things if apertium fst's are enabled:
 if WANT_APERTIUM
 
 # List generated regexes here:
 GENERATED_REGEXES=
-# E.g.: remove-derivation-strings.nob.regex
 
 endif # WANT_APERTIUM
 
-# Add the build code of local additions and generated regexes here, e.g.:
-# remove-%-strings.nob.regex: $(top_builddir)/src/filters/%-tags.txt \
-# 						remove-%-strings-modifications.nob.regex
-# 	$(AM_V_GEN)$(GTCORE)/scripts/taglist2remove_$*_strings_regex.sh \
-# 		$@ $^
+# Add the build code of local additions here:
 
 ##################################################################
 #### END: Add local processing instructions ABOVE this line ######
 ##################################################################
 
-##########################################
-# General build rules included from here:#
-
-include $(top_srcdir)/am-shared/tools-mt-apertium-filters-dir-include.am
+include $(top_srcdir)/am-shared/tools-mt-filters-dir-include.am
 
 # vim: set ft=automake:
