Moving things around to make local build steps work with the new setup. FAO should be back to normal.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@170247 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/tools/mt/Makefile.am
+++ b/tools/mt/Makefile.am
@@ -8,6 +8,15 @@ SUBDIRS = filters . apertium
 #### BEGIN: Add local processing instructions BELOW this line ####
 ##################################################################
 
+# We want to rename the POS tags in front of derivations:
+analyser-mt-gt-desc.hfst: analyser-mt-gt-desc.tmp.hfst \
+		filters/remove-derivation-strings.hfst
+	$(AM_V_RGX2FST)$(PRINTF) "\
+		@\"filters/remove-derivation-strings.hfst\" .o. @\"$<\" ;" \
+		| $(HFST_REGEXP2FST) $(HFST_FLAGS) $(HFST_FORMAT) \
+			-S --xerox-composition=ON \
+		| $(HFST_INVERT) $(HFSTFLAGS) \
+		-o $@
 
 ##################################################################
 #### END: Add local processing instructions ABOVE this line ######
