--- a/src/morphology/Makefile.am
+++ b/src/morphology/Makefile.am
@@ -40,7 +40,6 @@ GT_LEXC_SRCS_L1_L2=\
 			 stems/numerals.lexc      \
 			 stems/pronouns.lexc      \
 			 stems/propernouns.lexc   \
-			 stems/punctuation.lexc   \
 			 stems/subjunctions.lexc  \
 			 stems/verbs.lexc
 
@@ -60,7 +59,7 @@ GT_LEXC_L2_SRCS=\
 			$(L2)
 
 # Set this to the names of all generated lexc files, if any
-GENERATED_LEXC_SRCS=
+GENERATED_LEXC_SRCS=generated_files/punctuation.lexc
 
 # Set this to the names of all source xml files, if any
 GT_XML_SRCS=
