--- a/test/src/gt-norm-yamls/V-s21_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s21_gt-norm.yaml
@@ -10,9 +10,9 @@ Config:
 Tests:
 
   Verb - gera: # 
-    gera+V+Inf: gera
-    gera+V+Ind+Prs+3Sg: ger
-    gera+V+Ind+Prt+Sg: gjørdi
-    gera+V+Ind+Prt+Pl: gjørdu
-    gera+V+Sup: gjørt
-    gera+V+PrfPrc: gjørdur
+    gera+v1+V+Inf: gera
+    gera+v1+V+Ind+Prs+3Sg: ger
+    gera+v1+V+Ind+Prt+Sg: gjørdi
+    gera+v1+V+Ind+Prt+Pl: gjørdu
+    gera+v1+V+Sup: gjørt
+    gera+v1+V+PrfPrc: gjørdur
