--- a/test/src/gt-norm-yamls/V-s8x30_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/V-s8x30_gt-norm.yaml
@@ -10,7 +10,7 @@ Config:
 Tests:
 
   Verb - glimma: # 
-    glimma+V+Ind+Prt+Sg: glimdi
-    glimma+V+Ind+Prt+Pl: glimdu
-    glimma+V+Sup: glimt
-    glimma+V+PrfPrc: glimdur
+    glimma+V+Ind+Prt+Sg: [glimdi, glimmaði]
+    glimma+V+Ind+Prt+Pl: [glimdu, glimmaðu]
+    glimma+V+Sup: [glimt glimmað]
+    glimma+V+PrfPrc: [glimdur, glimmaður]
