ref til nye filer.
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@180597 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/src/morphology/Makefile.am
+++ b/src/morphology/Makefile.am
@@ -24,13 +24,15 @@ GT_LEXC_ROOT=$(srcdir)/root.lexc
 # Set this to the names of all regular lexc source files:
 GT_LEXC_SRCS_L1_L2=\
 			 compounding.lexc         \
+			 affixes/acronyms.lexc  \
 			 affixes/adjectives.lexc  \
 			 affixes/nouns.lexc       \
+			 affixes/numerals.lexc       \
 			 affixes/propernouns.lexc \
 			 affixes/symbols.lexc     \
 			 affixes/verbs.lexc       \
 			 stems/abbreviations.lexc \
-			 stems/acronyms.lexc      \
+			 stems/fao-acronyms.lexc      \
 			 stems/adjectives.lexc    \
 			 stems/adpositions.lexc   \
 			 stems/adverbs.lexc       \
@@ -61,7 +63,10 @@ GT_LEXC_L2_SRCS=\
 
 # Set this to the names of all generated lexc files, if any
 GENERATED_LEXC_SRCS=generated_files/punctuation.lexc \
-                    generated_files/symbols.lexc
+                    generated_files/symbols.lexc \
+                    generated_files/arabic_roman_digits.lexc \
+                    generated_files/smi-acronyms.lexc \
+                    generated_files/smi-digits.lexc 
 
 # Set this to the names of all source xml files, if any
 GT_XML_SRCS=
@@ -84,6 +89,18 @@ GT_DISTRO_SRCS=
 ### gle/ for an example of how this is used.
 
 GIELLA_LOCAL_TARGETS=
+
+generated_files/arabic_roman_digits.lexc: \
+			$(GIELLA_SHARED)/smi/src/morphology/stems/arabic_roman_digits.lexc
+	$(AM_V_at)$(MKDIR_P) generated_files
+	$(AM_V_GEN)cp -f $< $@
+
+
+generated_files/%.lexc: \
+			$(GIELLA_SHARED)/smi/src/morphology/stems/%.lexc
+	$(AM_V_at)$(MKDIR_P) generated_files
+	$(AM_V_GEN)cp -f $< $@
+
 
 ### END: Local processing: ###
 
