http://divvun.no/doc -> https://giellalt.uit.no
git-svn-id: https://gtsvn.uit.no/langtech/trunk/langs/fao@180635 c7155fb1-f0a7-4240-a2fc-2600b6f42f90

--- a/giella-fao.pc.in
+++ b/giella-fao.pc.in
@@ -7,5 +7,5 @@ srcdir=${datadir}/giella/${gtlang}
 
 Name: giella-fao
 Description: Finite-state language processing tools for Faroese
-URL: http://divvun.no/doc/index.html
+URL: https://giellalt.uit.no/index.html
 Version: @VERSION@
