La til to nye filer til dokumentasjonen.

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -14,19 +14,18 @@
 if CAN_DOCC
 
 JSP_PAGES=root-morphology.jspwiki  \
-		  fao-phon-phonology.jspwiki
+		  fao-phon-phonology.jspwiki \
+		  nouns-affixes.jspwiki  \
+		  nouns-stems.jspwiki
 # clitics-morphology.jspwiki       \
 # compounding-morphology.jspwiki   \
 # abbreviations-stems.jspwiki      \
 # acronyms-stems.jspwiki           \
-# adjectives-oahpa-stems.jspwiki   \
 # adjectives-stems.jspwiki         \
 # adpositions-stems.jspwiki        \
 # adverbs-stems.jspwiki            \
 # conjunctions-stems.jspwiki       \
 # interjections-stems.jspwiki      \
-# nouns-oahpa-stems.jspwiki        \
-# nouns-stems.jspwiki              \
 # numerals-stems.jspwiki           \
 # particles-stems.jspwiki          \
 # pronouns-stems.jspwiki           \
@@ -35,9 +34,7 @@ JSP_PAGES=root-morphology.jspwiki  \
 # smi-propernouns-stems.jspwiki    \
 # subjunctions-stems.jspwiki       \
 # verbs-stems.jspwiki              \
-# adjectives-oahpa-affixes.jspwiki \
 # adjectives-affixes.jspwiki       \
-# nouns-affixes.jspwiki            \
 # propernouns-affixes.jspwiki      \
 # verbs-affixes.jspwiki
 
