Retta formelle feil.

--- a/test/src/gt-norm-yamls/N-kv35_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/N-kv35_gt-norm.yaml
@@ -23,9 +23,9 @@ Tests:
     á+N+Fem+Pl+Nom+Def: áirnar
     á+N+Fem+Pl+Dat+Def: áunum
     á+N+Fem+Pl+Gen+Def: áanna
-    
-    
-      Noun - : kraft #
+
+
+  Noun - : # kv_
     ong+N+Fem+Sg+Nom+Indef: ong
     ong+N+Fem+Sg+Acc+Indef: ong
     ong+N+Fem+Sg+Dat+Indef: ong
@@ -40,4 +40,3 @@ Tests:
     ong+N+Fem+Pl+Nom+Def: eingirnar
     ong+N+Fem+Pl+Dat+Def: eingjunum
     ong+N+Fem+Pl+Gen+Def: eingjanna
-       
