--- a/test/src/morphology/generate-propernoun-lemmas.sh.in
+++ b/test/src/morphology/generate-propernoun-lemmas.sh.in
@@ -95,32 +95,32 @@ for f in $fsttype; do
 ###### Test non-comopunds: #######
         # generate propers in singular masculine, extract the resulting generated lemma,
         # store it:
-        sed 's/$/+N+Prop+Msc+Sg+Nom+Indef/' $lemmas | $lookup_tool $generator_file.$suffix \
+        sed 's/$/+N+Prop+Msc+Sg+Nom/' $lemmas | $lookup_tool $generator_file.$suffix \
 			| fgrep -v "+?" | grep -v "^$" | cut -f2 \
             > $generated_lemmas.$f.txt
 
         # extract propers that do not generate in  in singular masculine, 
         # try with feminine, store it:
-        sed 's/$/+N+Prop+Msc+Sg+Nom+Indef/' $lemmas | $lookup_tool $generator_file.$suffix \
-			| fgrep "+?" | cut -d "+" -f1 | sed 's/$/+N+Prop+Fem+Sg+Nom+Indef/' \
+        sed 's/$/+N+Prop+Msc+Sg+Nom/' $lemmas | $lookup_tool $generator_file.$suffix \
+			| fgrep "+?" | cut -d "+" -f1 | sed 's/$/+N+Prop+Fem+Sg+Nom/' \
 			| $lookup_tool $generator_file.$suffix | fgrep -v "+?" | cut -f2 \
             | grep -v "^$" >> $generated_lemmas.$f.txt
 
         # extract propers that do not generate in  in singular masculine or feminine, 
         # try with neuter, store it:
-        sed 's/$/+N+Prop+Msc+Sg+Nom+Indef/' $lemmas | $lookup_tool $generator_file.$suffix \
-			| fgrep "+?" | cut -d "+" -f1 | sed 's/$/+N+Prop+Fem+Sg+Nom+Indef/' \
+        sed 's/$/+N+Prop+Msc+Sg+Nom/' $lemmas | $lookup_tool $generator_file.$suffix \
+			| fgrep "+?" | cut -d "+" -f1 | sed 's/$/+N+Prop+Fem+Sg+Nom/' \
 			| $lookup_tool $generator_file.$suffix \
-			| fgrep -v "+?" | cut -d "+" -f1 | sed 's/$/+N+Prop+Neu+Sg+Nom+Indef/'  \
+			| fgrep -v "+?" | cut -d "+" -f1 | sed 's/$/+N+Prop+Neu+Sg+Nom/'  \
 			| $lookup_tool $generator_file.$suffix | fgrep -v "+?" | cut -f2 \
             | grep -v "^$" >> $generated_lemmas.$f.txt
 
         # extract propers that do not generate in  in singular masculine, feminine 
         # or neuter, try with genderless, store it:
-        sed 's/$/+N+Prop+Msc+Sg+Nom+Indef/' $lemmas | $lookup_tool $generator_file.$suffix \
-			| fgrep "+?" | cut -d "+" -f1 | sed 's/$/+N+Prop+Fem+Sg+Nom+Indef/' \
+        sed 's/$/+N+Prop+Msc+Sg+Nom/' $lemmas | $lookup_tool $generator_file.$suffix \
+			| fgrep "+?" | cut -d "+" -f1 | sed 's/$/+N+Prop+Fem+Sg+Nom/' \
 			| $lookup_tool $generator_file.$suffix \
-			| fgrep -v "+?" | cut -d "+" -f1 | sed 's/$/+N+Prop+Neu+Sg+Nom+Indef/'  \
+			| fgrep -v "+?" | cut -d "+" -f1 | sed 's/$/+N+Prop+Neu+Sg+Nom/'  \
 			| $lookup_tool $generator_file.$suffix \
 			| fgrep -v "+?" | cut -d "+" -f1 | sed 's/$/+N+Prop+Sg+Nom/'  \
 			| $lookup_tool $generator_file.$suffix | fgrep -v "+?" | cut -f2 \
@@ -128,7 +128,7 @@ for f in $fsttype; do
 
 ###        # generate propers in singular neuter, extract the resulting generated lemma,
 ###        # store it:
-###        sed 's/$/+N+Prop+Neu+Sg+Nom+Indef/' $lemmas \
+###        sed 's/$/+N+Prop+Neu+Sg+Nom/' $lemmas \
 ###			| $lookup_tool $generator_file.$suffix \
 ###			| fgrep -v "+?" | grep -v "^$" | cut -f2 \
 ###            >> $generated_lemmas.$f.txt
@@ -142,10 +142,10 @@ for f in $fsttype; do
 ###
 ###        # Generate nouns, extract those that do not generate in singular,
 ###        # and try to generate them in plural:
-###        sed 's/$/+N+Prop+Sg+Nom+Indef/' $lemmas \
+###        sed 's/$/+N+Prop+Sg+Nom/' $lemmas \
 ###			| $lookup_tool $generator_file.$suffix \
 ###			| fgrep "+?" | cut -d "+" -f1 \
-###			| sed 's/$/+N+Prop+Pl+Nom+Indef/' \
+###			| sed 's/$/+N+Prop+Pl+Nom/' \
 ###			| $lookup_tool $generator_file.$suffix \
 ###			| fgrep -v "+?" | grep -v "^$" | cut -f2 \
 ###			>> $generated_lemmas.$f.txt
