La til alternerande former etter attendemelding frå Hedin.

--- a/test/src/gt-norm-yamls/N-k38_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/N-k38_gt-norm.yaml
@@ -19,7 +19,7 @@ Tests:
     bógvur+N+Msc+Pl+Gen+Indef: bógva
     bógvur+N+Msc+Sg+Nom+Def: bógvurin
     bógvur+N+Msc+Sg+Acc+Def: bógvin
-    bógvur+N+Msc+Sg+Dat+Def: [bógnum, bógvinum]
+    bógvur+N+Msc+Sg+Dat+Def: [bógnum, böginum]
     bógvur+N+Msc+Sg+Gen+Def: bógsins
     bógvur+N+Msc+Pl+Nom+Def: [bøgirnir, bógvarnir]
     bógvur+N+Msc+Pl+Acc+Def: [bøgirnar, bógvarnar]
