--- a/test/src/gt-norm-yamls/N-kv14_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/N-kv14_gt-norm.yaml
@@ -14,7 +14,7 @@ Tests:
     nátt+N+Fem+Sg+Dat+Indef: nátt
     nátt+N+Fem+Sg+Gen+Indef: náttar
     nátt+N+Fem+Pl+Nom+Indef: nætur
-    nátt+N+Fem+Pl+Dat+Indef: náttum
+    nátt+N+Fem+Pl+Dat+Indef: [nætrum, náttum]
     nátt+N+Fem+Pl+Gen+Indef: nátta
     nátt+N+Fem+Sg+Nom+Def: náttin
     nátt+N+Fem+Sg+Acc+Def: náttina
