--- a/test/src/gt-norm-yamls/N-kv6_gt-norm.yaml
+++ b/test/src/gt-norm-yamls/N-kv6_gt-norm.yaml
@@ -14,7 +14,7 @@ Tests:
     bók+N+Fem+Sg+Dat+Indef: bók
     bók+N+Fem+Sg+Gen+Indef: bókar
     bók+N+Fem+Pl+Nom+Indef: bøkur
-    bók+N+Fem+Pl+Dat+Indef: bókum
+    bók+N+Fem+Pl+Dat+Indef: [bøkrum, bókum]
     bók+N+Fem+Pl+Gen+Indef: bóka
     bók+N+Fem+Sg+Nom+Def: bókin
     bók+N+Fem+Sg+Acc+Def: bókina
